  * feature, show privileges in user-management overview (#94)
  * feature, set default language via user-management (#57)
  * feature, nephthys_watch.php is now quiet per default
      but support verbose-mode via -v command line option (#90)
  * feature, config-option to force auto-created users to update
      their profiles (#87)
  * feature, notify owner when bucket has expired (#96)

 -- Andreas Unterkircher <unki@netshadow.at>  Sat, 11 Oct 2008 09:59:42 +0200

nephthys (1.3)

  * feature, russian translation (#2)
       contributed by Alexander Davidenko
  * feature, italian translation (#75)
       contributed by Alberto Vincenzi
  * feature, spanish translation (#77)
       contributed by Juan Pablo
  * feature, dutch translation (#82)
       contributed by Gijs van Gemert
  * feature, fullname for address-book contacts (#50)
  * feature, auto-suggest for multiple receivers (#69)
  * feature, deny user-password-change flag (#71)
  * feature, confirmation dialog is now shown after clicking "notify" (#49)
  * feature, permit input-format "fullname <email-address" as receiver
       address, to be auto-inserted into the address-book (#83)

 -- Andreas Unterkircher <unki@netshadow.at>  Sat, 11 Oct 2008 09:59:42 +0200

nephthys (1.2)

  * feature, new privilege for long-time buckets (#41)
  * feature, support for mutli-language (#1)
  * feature, german translation (#42)
  * feature, expirining date now also showes up in notification email (#48)
  * bug, user fullname is now editable via user-management (#38)
  * bug, used-diskspace now displays the real used diskspace (#40)
  * bug, icons and images are now theme-managed too (#39)
  * bug, GPL banners in Nephthys own PHP files now lead to GPLv3 (#43)
  * bug, german umlauts are now handled correct (#46)
  * bug, german umlauts in notification email are now displayed correct (#52)
  * bug, unprivileged users can finally delete their address-book contacts (#54)