@@ -4,10 +4,12 @@ ACTIONS=Aktionen
 ADDRESS_BOOK=Adressbuch
 ADMIN=Administrator
 AGAIN=Passwort wiederholen
+ASCENDING=Aufsteigend
 CREATED=Erstellt am
 DAY=Tag
 DAYS=Tage
 DELETE=Löschen
+DESCENDING=Absteigend
 DISABLED=Deaktivieren
 DISK_USED=Belegt
 DISK_FREE=Frei
