@@ -4,10 +4,12 @@ ACTIONS=Actions
 ADDRESS_BOOK=Address-Book
 ADMIN=Administrator
 AGAIN=again
+ASCENDING=Ascending
 CREATED=Created
 DAY=Day
 DAYS=Days
 DELETE=Delete
+DESCENDING=Descending
 DISABLED=Disabled
 DISK_USED=Used
 DISK_FREE=Free
