@@ -7,10 +7,12 @@ ACTIONS=Accion
 ADDRESS_BOOK=Libreta de Direcciones
 ADMIN=Administrador
 AGAIN=Repetir Contraseña
+ASCENDING=Ascending
 CREATED=Creado
 DAY=Dia
 DAYS=Dias
 DELETE=Borrar
+DESCENDING=Descending
 DISABLED=Deshabilitado
 DISK_USED=Usado
 DISK_FREE=Libre
