@@ -4,10 +4,12 @@ ACTIONS=Azioni
 ADDRESS_BOOK=Rubrica
 ADMIN=Amministratore
 AGAIN=Nuovamente
+ASCENDING=Ascending
 CREATED=Creato
 DAY=Giorno
 DAYS=Giorni
 DELETE=Elimina
+DESCENDING=Descending
 DISABLED=Disabilitato
 DISK_USED=Usati
 DISK_FREE=Disponibili
