@@ -7,10 +7,12 @@ ACTIONS=Acties
 ADDRESS_BOOK=Addresboek
 ADMIN=Administrator
 AGAIN=Opnieuw
+ASCENDING=Ascending
 CREATED=Gemaakt
 DAY=Dag
 DAYS=Dagen
 DELETE=Verwijder
+DESCENDING=Descending
 DISABLED=Uitgeschakeld
 DISK_USED=Gebruikt
 DISK_FREE=Vrij
