@@ -7,10 +7,12 @@ ACTIONS=Действия
 ADDRESS_BOOK=Адресная книга
 ADMIN=Администратор
 AGAIN=Повтор
+ASCENDING=Ascending
 CREATED=Создан
 DAY=День
 DAYS=дней
 DELETE=Удалить
+DESCENDING=Descending
 DISABLED=Удалён
 DISK_USED=Занято
 DISK_FREE=Свободно
